--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="row">
         <div class="six columns" id="about-section">
           <h3 id="about-title"> Goal</h3>
-          <p id="justfy-text"> The goal of this project was to create an interactive social socially distant asymmetric
+          <p id="justfy-text"> The goal of this project was to create an interactive social socially-distant asymmetric
             multiplayer experience combining methods advanced computer graphics with advanced human-computer
             interaction. </p>
         </div>
