Added Related Work

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p>Eye in the Sky is an asymmetric multiplayer game that can be played on a desktop or tablet.
           The players can either play on the ground and try to collect all pineapples and bring them back to the home
           base before the time runs out or play as the <i>Eye in the Sky </i>
-          who tries to interfere with the other players and stop them from completing their mission.
+          who tries to interfere with the other players and stop them from completing their mission!
         </p>
       </div>
 
@@ -223,6 +223,14 @@
         <p id="justfy-text">
           Eye in the Sky is a project that was created over the course of around 16 weeks and the process was divided
           into two phases.
+        </p>
+
+        <p id="justfy-text">
+          <b>Related Work</b><br />
+          We were partly inspired by <a href=https://www.jiabaoli.org/cat>"CatEscape"</a>, 
+          an asymmetrical multi-platform game that incorporated collaborative virtual reality, 
+          augmented reality and tablet gameplay. One of the players in CatEscape has a top-down view of the game world, which 
+          we later incorporated in Eye In The Sky.
         </p>
 
         <p id="justfy-text">
