--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
             components written in the C# programming language;
             this includes player movement and interactions, physics,
             animation handling, sound, visual effects and more.
+            We chose to use Unity because of its capability for developing 
+            for multiple platforms simultaneously and its rich feature set.
           </p>
         </div>
 
@@ -310,6 +312,8 @@
             Blender is an open-source 3D computer graphics software toolset.
             We used blender for all 3D-graphics in the game; this includes 3D-modeling,
             UV-mapping, rigging and animating the 3D-models and more.
+            Blender was chosen as the tool for creation of our 3D-assets as it is 
+            open source and widely available, and a great tool for learning 3D-modeling.
           </p>
         </div>
       </div>
@@ -325,6 +329,9 @@
             We used Mirror to handle all network traffic between the game clients
             and the game host/server; this includes spawning players, updating world state,
             tracking player and item positions/transforms and more.
+            We chose to use Mirror as our network framework rather than Unity's 
+            built in network framework Unet or any other solution, 
+            sice Mirror builds on Unet making it very easy integrating it into Unity while fixing a lot of issues present in Unet.
           </p>
         </div>
 
