fixed image size in gallery

--- a/index.html
+++ b/index.html
@@ -107,20 +107,6 @@
 
       </div>
 
-      <!-- The Video Modal -->
-      <div id="vid-modal" class="modal">
-
-        <!-- The Close Button -->
-        <span id="close-vid" class="close">&times;</span>
-
-        <!-- Modal Content (The Image) -->
-        <!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-i424bKe-kY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-
-        <!-- Next/previous controls -->
-        <a class="prev" onclick="nextImg(-1)">&#10094;</a>
-        <a class="next" onclick="nextImg(1)">&#10095;</a>
-      </div>
-
       <div id="image-gallery" class="container">
         <h2>Gallery</h2>
 
@@ -180,9 +166,10 @@
         <!-- Modal Content (The Image) -->
         <img class="modal-content" id="modal-img">
 
-        <!-- Next/previous controls -->
+        <!-- Next/previous controls 
         <a class="prev" onclick="nextImg(-1)">&#10094;</a>
         <a class="next" onclick="nextImg(1)">&#10095;</a>
+        -->
       </div>
 
     </div>
